<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.moviesdetails.MoviesDetailsActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgMovieBanner"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity=""
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Card.Media" />

        <ToggleButton
            android:id="@+id/btnFavorite"
            android:visibility="visible"
            android:checked="false"
            android:layout_width="@dimen/vBigMargin"
            android:layout_height="@dimen/vBigMargin"
            android:background="@drawable/ic_favorite"
            android:text=""
            android:textOff=""
            android:textOn=""
            android:layout_marginEnd="@dimen/vBigMargin"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTitle"
            app:layout_constraintVertical_bias="0.545" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/width"
            app:layout_constraintEnd_toStartOf="@+id/btnFavorite"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgMovieBanner"
            tools:text="Ford vs Ferrari"
            style="@style/DetailedMovieTitle"/>

        <TextView
            android:id="@+id/txtMovieYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="@+id/txtTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            tools:text="2020"
            style="@style/InfoMovieDetailsText"/>

        <TextView
            android:id="@+id/txtPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigMargin"
            app:layout_constraintStart_toEndOf="@+id/txtMovieYear"
            app:layout_constraintTop_toTopOf="@+id/txtMovieYear"
            tools:text="PG-L"
            style="@style/InfoMovieDetailsText" />

        <TextView
            android:id="@+id/txtMovieLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigMargin"
            app:layout_constraintStart_toEndOf="@+id/txtPage"
            app:layout_constraintTop_toTopOf="@+id/txtPage"
            tools:text="2h55min"
            style="@style/InfoMovieDetailsText"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvMovieGenres"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@+id/txtMovieYear"
            app:layout_constraintTop_toBottomOf="@+id/txtMovieYear"
            tools:ignore="MissingConstraints"
            tools:listitem="@layout/activity_movies_type" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/arrow"
            android:src="@drawable/ic_arrow"
            android:contentDescription="@string/return_main"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/margin"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="160dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFavorite"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:cardElevation="@dimen/margin"
                style="@style/LabelRatingCardView" />

        </FrameLayout>

        <TextView
            android:id="@+id/txtUsersRating"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/users_rate"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/btnFavorite"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/RatingText" />

        <TextView
            android:id="@+id/txtMovieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/txtUsersRating"
            app:layout_constraintStart_toStartOf="@+id/txtUsersRating"
            tools:text="81%"
            style="@style/PercentText" />

        <ImageView
            android:id="@+id/imgLabelStar"
            android:layout_width="@dimen/bigMargin"
            android:layout_height="@dimen/bigMargin"
            android:contentDescription="@string/movie_rate"
            android:src="@drawable/ic_star"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtUsersRating"
            app:layout_constraintEnd_toStartOf="@+id/txtUsersRating"
            app:layout_constraintTop_toTopOf="@+id/txtMovieRating" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvMovieCast"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCast"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/activity_cast" />

        <TextView
            android:id="@+id/txtSinopsysTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtMovieYear"
            app:layout_constraintTop_toBottomOf="@id/rcvMovieGenres"
            tools:ignore="NotSibling"
            style="@style/TitlesInfoDetail" />

        <TextView
            android:id="@+id/txtSinopsys"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/vBigMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtSinopsysTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtSinopsysTitle" />

        <TextView
            android:id="@+id/txtCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/txtSinopsys"
            app:layout_constraintTop_toBottomOf="@+id/txtSinopsys"
            style="@style/TitlesInfoDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>