<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="@dimen/width"
                    android:layout_height="@dimen/width"
                    android:background="@color/white"
                    app:srcCompat="@drawable/ic_search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="VectorDrawableCompat"/>

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="290dp"
                    android:layout_height="@dimen/width"
                    android:textColor="@color/searchColor"
                    app:layout_constraintBottom_toBottomOf="@+id/btnSearch"
                    app:layout_constraintStart_toEndOf="@+id/btnSearch"
                    app:layout_constraintTop_toTopOf="@+id/btnSearch"/>

        <ImageView
            android:id="@+id/imgRectangle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:srcCompat="@drawable/ic_green_line"
            app:layout_constraintStart_toStartOf="@+id/btnSearch"
            app:layout_constraintTop_toBottomOf="@+id/btnSearch"/>

        <TextView
            android:id="@+id/txtSearchMode"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/search_mode"
            app:layout_constraintStart_toStartOf="@+id/imgRectangle"
            app:layout_constraintTop_toBottomOf="@+id/imgRectangle"
            style="@style/MovieTitle"/>

        <TextView
            android:id="@+id/txtTryAgain"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_beginning"
            android:textColor="@color/greenPrimaryColor"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/vSmallMargin"
            app:layout_constraintStart_toStartOf="@+id/txtSearchMode"
            app:layout_constraintTop_toBottomOf="@+id/txtSearchMode" />

        <FrameLayout
            android:id="@+id/searchFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtTryAgain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:visibility="visible"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSearch"
            app:tabIndicator="@drawable/ic_green_line"
            app:tabIndicatorFullWidth="false"
            style="@style/TabLayout"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tablayout"  />

        <ImageView
            android:id="@+id/imgNotFound"
            android:visibility="gone"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginTop="180dp"
            android:src="@drawable/ic_search_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNot"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/nonexistent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgNotFound"
            style="@style/MovieTitle"/>

        <TextView
            android:id="@+id/txtMessage"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_regular"
            android:text="@string/movie_not_found"
            android:textAlignment="center"
            android:textSize="@dimen/textSize"
            android:layout_marginTop="@dimen/margin"
            android:paddingHorizontal="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNot" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>